--- a/appointa/index.html
+++ b/appointa/index.html
@@ -138,8 +138,7 @@
         <ul class="nav-menu">
           <li class="dropdown nav-item active APPOINTA marginZero"><a href="/" class="nav-link box">PROJECT</a>
             <div class="dropdown-content">
-              <a target="_blank"
-                href="/glorify/">
+              <a href="/glorify/">
                 <div class="cardBorder GLORIFY">
                   <img src="../image/Cover_Glorify.png" alt="GLORIFY">
                   <div class="element">
