--- a/glorify/index.html
+++ b/glorify/index.html
@@ -256,7 +256,9 @@
       <div class="element">
         <h3><strong>Timeline</strong></h3>
         <h4>April 2023 </h4>
-        <h4>8 Hours </h4>
+        <h4>24 Hours</h4>
+        <h4>2 - 3 Hours &#47; day</h4>
+
       </div>
     </div>
     <div class="Grid-cell">
