--- a/design_system/index.html
+++ b/design_system/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html lang="en">
 
 
@@ -1608,6 +1610,7 @@
             </div>
           </section>
           <div class="blankHM"></div>
+
         </section>
       </div>
     </div>
