--- a/glorify/index.html
+++ b/glorify/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -30,8 +31,7 @@
   <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="../scripts.js"></script>
   <script type="text/javascript" src="../scripts_project.js"></script>
-  <!--   
- -->
+
 
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -349,44 +349,48 @@
       <ol>
         <li><a href="#content1" class="titleRightPanel">Understand</a>
           <ul>
-            <li class="rightPanel"><a href="#content11"> &#160; Problem statement </a></li>
+            <li class="rightPanel"><a href="#content11"> &#160; Problem statement</a></li>
+            <li class="rightPanel"><a href="#content12"> &#160; Research plan</a></li>
 
-            <li class="rightPanel"><a href="#content12"> &#160; Christian community</a></li>
-            <li class="rightPanel"><a href="#content13"> &#160; Physical experience</a></li>
-            <li class="rightPanel"><a href="#content14"> &#160; Digital experience </a></li>
+            <li class="rightPanel"><a href="#content13"> &#160; User interview</a></li>
+            <li class="rightPanel"><a href="#content14"> &#160; Insights</a></li>
+            <li class="rightPanel"><a href="#content15"> &#160; Problem statement update</a></li>
+            <li class="rightPanel"><a href="#content16"> &#160; Brainstorm solutions</a></li>
+
           </ul>
-
         </li>
-        <li><a href="#content2" class="titleRightPanel">Define</a>
+        <li><a href="#content2" class="titleRightPanel">Structure</a>
           <ul>
-            <li class="rightPanel"><a href="#content21"> &#160; C2 - SC 1 </a></li>
-            <li class="rightPanel"><a href="#content22"> &#160; C2 - SC 2</a></li>
-            <li class="rightPanel"><a href="#content23"> &#160; C2 - SC 3 </a></li>
+            <li class="rightPanel"><a href="#content21"> &#160; Current state </a></li>
+            <li class="rightPanel"><a href="#content22"> &#160; Tree testing</a></li>
           </ul>
         </li>
 
 
         <li><a href="#content3" class="titleRightPanel">Wireframes</a>
           <ul>
-            <li class="rightPanel"><a href="#content31"> &#160; C3 - SC 1</a></li>
-            <li class="rightPanel"><a href="#content32"> &#160; C3 - SC 2</a></li>
-            <li class="rightPanel"><a href="#content33"> &#160; C3 - SC 3 </a></li>
-
+            <li class="rightPanel"><a href="#content31"> &#160; Flows</a></li>
+            <li class="rightPanel"><a href="#content32"> &#160; Usability testing</a></li>
+          </ul>
+        </li>
+        <li><a href="#content4" class="titleRightPanel">Iteration</a>
+          <ul>
+            <li class="rightPanel"><a href="#content41"> &#160; Update</a></li>
+            <li class="rightPanel"><a href="#content42"> &#160; Test </a></li>
 
           </ul>
         </li>
-        <li><a href="#content4" class="titleRightPanel">Final enhancement</a>
+        <li><a href="#content5" class="titleRightPanel">Final enhancement</a>
           <ul>
-            <li class="rightPanel"><a href="#content41"> &#160; C4 - SC 1</a></li>
-            <li class="rightPanel"><a href="#content42"> &#160; C4 - SC 2 </a></li>
-            <li class="rightPanel"><a href="#content43"> &#160; C4 - SC 3 </a></li>
+            <li class="rightPanel"><a href="#content51"> &#160; Hi-fi prototype</a></li>
+            <li class="rightPanel"><a href="#content52"> &#160; Prototype enhancement </a></li>
 
           </ul>
         </li>
       </ol>
     </nav>
     <div>
-      <section id="content1" class="colorBgGrey">
+      <section id="content1" class="">
         <div class="Grid Grid--full u-textCenter">
           <div class="Grid-cell">
             <h1 class="Grid Grid--center"> <span>Understand</span><img class="moveUpDown widthLogo"
@@ -395,140 +399,220 @@
           </div>
         </div>
         <section id="content11">
-
-          <div class="Grid Grid--full wrapper">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="cardGlorify heightS">
-                  <h2> <strong> Problem statement</strong> </h2>
-                  <p>The Glorify mobile application, designed to support users in their spiritual journey within the
-                    Christian faith, currently lacks community engagement features, hindering its ability to provide a
-                    holistic and socially interactive experience. The absence of such features restricts users from
-                    fully satisfying their needs for collaborative and social experiences in their faith journey. To
-                    enhance the user experience and align with the values of Christianity, there is a need to explore
-                    and incorporate community engagement features into the Glorify app.</p>
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="element">
+              <h2 class="tArrow">Problem statement<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
+              </h2>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="Grid">
+                    <img class="modal-target" src="Research_Context.svg" alt="Pain points">
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+          <!-- Arrow -->
         </section>
+
         <section id="content12">
           <!-- Arrow -->
           <div class="wrapper">
             <div class="element">
-              <h2 class="tArrow">Christian community <img class="seArrow" src="../../icon/arrow-se.svg"
-                  alt="icon arrow"></h2>
+              <h2 class="tArrow">Research plan<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></h2>
             </div>
           </div>
           <!-- Arrow -->
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="Grid">
+                    <img class="modal-target" src="Research_ResearchPlan.svg" alt="Pain points">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section id="content13">
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="element">
+              <h2 class="tArrow">User interview<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></h2>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="Grid">
+                    <img class="modal-target" src="Research_InterviewScript.svg" alt="Pain points">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="WhiteBg wrapper">
+            <div class="blankHXS"></div>
+            <!-- Slideshow Title -->
+            <h2 class="element">Vertical layout without background color </h2>
+            <!-- Slideshow Title -->
+            <div class="TBcarousel Grid--center Grid Grid--full u-textCenter" aria-label="TBcarousel" Tabindex="0"
+              id="TBcarouselGlorify1">
+              <div class="TBslides">
+                <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
+                  <img src="../PlaceholderDark.svg" alt="">
+                </div>
+                <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0"> <img
+                    src="../PlaceholderDark.svg" alt="">
+                </div>
+                <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0"> <img
+                    src="../PlaceholderDark.svg" alt="">
+                </div>
+              </div>
+              <div class="TBcarouselNav Grid-cell noBg">
+                <a class="TBsliderNav" aria-label="Go to slide 1">
+                  <div>Lorem ipsum</div>
+                </a>
+                <a class="TBsliderNav" aria-label="Go to slide 2">
+                  <div>Lorem ipsum</div>
+                </a>
+                <a class="TBsliderNav" aria-label="Go to slide 3">
+                  <div>Lorem ipsum</div>
+                </a>
+              </div>
+              <div class="blankHS"></div>
+            </div>
+            <div class="blankHXS"></div>
+          </div>
+        </section>
+
+        <!-- Arrow -->
+        <div class="wrapper">
+          <div class="element">
+            <h2 class="tArrow">Define &#38; brainstorm <img class="seArrow" src="../../icon/arrow-se.svg"
+                alt="icon arrow"></h2>
+          </div>
+        </div>
+        <!-- Arrow -->
+
+
+        <div class="Grid Grid--full wrapper">
+          <div class="Grid-cell">
+            <div class="element">
+              <p class="specialTextL colorGLORIFYOrange">What&#63; &nbsp; Why&#63;
+                &nbsp; How&#63; &nbsp; When&#63; &nbsp; </p>
+            </div>
+          </div>
+        </div>
+        <!-- insights -->
+        <div class="wrapper">
+          <!-- key pain points -->
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--cols-2">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="elementInnerL cardAPPOINTA heightS">
+                    <img class="iconM" src="iconSearch.svg" alt="search">
+
+                    <div class="blankHXS"></div>
+                    <h4> <strong> Challenges of scheduling</strong> </h4>
+                    <ul>
+                      <li>What are the challenges of scheduling job interviews?</li>
+                      <li>When did the problem occur?</li>
+
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="elementInnerL cardAPPOINTA heightS">
+                    <img class="iconM" src="iconSearch.svg" alt="search">
+
+                    <div class="blankHXS"></div>
+
+                    <h4> <strong>Harder to schedule within a reasonable timeframe</strong> </h4>
+
+                    <ul>
+                      <li>
+                        What are the types of situations that are most likely to spend longer time
+                        scheduling an interview?</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="Grid Grid--gutters Grid--cols-2">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="elementInnerL cardAPPOINTA heightS">
+                    <img class="iconM" src="iconSearch.svg" alt="search">
+
+                    <div class="blankHXS"></div>
+                    <h4> <strong> Tools/methods</strong> </h4>
+                    <ul>
+                      <li>What tools/methods are successful in scheduling job interviews, why do
+                        you
+                        need them?</li>
+                      <li>
+                        How do the scheduling tools help the recruiters to schedule job
+                        interviews?
+                      </li>
+
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="elementInnerL cardAPPOINTA heightS">
+                    <img class="iconM" src="iconSearch.svg" alt="search">
+
+                    <div class="blankHXS"></div>
+
+                    <h4> <strong> Improvement/wishlist</strong> </h4>
+
+                    <ul>
+                      <li>
+                        Is there anything you wish you could do with these products which is
+                        currently not possible?</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
 
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
-                <p class="specialTextL colorGLORIFYOrange">What&#63; &nbsp; Why&#63;
-                  &nbsp; How&#63; &nbsp; When&#63; &nbsp; </p>
-              </div>
-            </div>
-          </div>
-          <!-- insights -->
-          <div class="wrapper">
-            <!-- key pain points -->
-            <div class="wrapper">
-              <div class="Grid Grid--gutters Grid--cols-2">
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="elementInnerL cardAPPOINTA heightS">
-                      <img class="iconM" src="iconSearch.svg" alt="search">
-
-                      <div class="blankHXS"></div>
-                      <h4> <strong> Challenges of scheduling</strong> </h4>
-                      <ul>
-                        <li>What are the challenges of scheduling job interviews?</li>
-                        <li>When did the problem occur?</li>
-
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="elementInnerL cardAPPOINTA heightS">
-                      <img class="iconM" src="iconSearch.svg" alt="search">
-
-                      <div class="blankHXS"></div>
-
-                      <h4> <strong>Harder to schedule within a reasonable timeframe</strong> </h4>
-
-                      <ul>
-                        <li>
-                          What are the types of situations that are most likely to spend longer time
-                          scheduling an interview?</li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="Grid Grid--gutters Grid--cols-2">
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="elementInnerL cardAPPOINTA heightS">
-                      <img class="iconM" src="iconSearch.svg" alt="search">
-
-                      <div class="blankHXS"></div>
-                      <h4> <strong> Tools/methods</strong> </h4>
-                      <ul>
-                        <li>What tools/methods are successful in scheduling job interviews, why do
-                          you
-                          need them?</li>
-                        <li>
-                          How do the scheduling tools help the recruiters to schedule job
-                          interviews?
-                        </li>
-
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="elementInnerL cardAPPOINTA heightS">
-                      <img class="iconM" src="iconSearch.svg" alt="search">
-
-                      <div class="blankHXS"></div>
-
-                      <h4> <strong> Improvement/wishlist</strong> </h4>
-
-                      <ul>
-                        <li>
-                          Is there anything you wish you could do with these products which is
-                          currently not possible?</li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-            </div>
-
-            <div class="Grid Grid--full wrapper">
-              <div class="Grid-cell">
                 <div class="element">
-                  <div class="element">
-                    <p class="specialTextNote colorAPPOINTAYellow u-textCenter">Discover the
-                      opportunity to improve the interview scheduling experience for recruiting team
-                    </p>
+                  <p class="specialTextNote colorAPPOINTAYellow u-textCenter">Discover the
+                    opportunity to improve the interview scheduling experience for recruiting team
+                  </p>
 
-                  </div>
                 </div>
               </div>
             </div>
-            <div class="blankHXS"></div>
           </div>
-          <!-- insights -->
+          <div class="blankHXS"></div>
+        </div>
+        <!-- insights -->
 
 
-        </section>
         <section id="content13">
           <!-- Arrow -->
           <div class="wrapper">
