--- a/appointa/index.html
+++ b/appointa/index.html
@@ -903,17 +903,12 @@
         <!-- Arrow -->
         <section id="empathyMap">
           <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <p class="tArrow"> Empathy map</p>
-                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
-                  </div>
-                </div>
-              </div>
+            <div class="element">
+              <h2 class="tArrow">Empathy map<img class="seArrow" src="../../icon/arrow-se.svg"
+                  alt="icon arrow"></h2>
             </div>
           </div>
+
           <!-- Arrow -->
           <div class="blankHXS"></div>
           <div class="wrapper">
