--- a/test/index.html
+++ b/test/index.html
@@ -195,41 +195,312 @@
 
   <!-- Working process -->
 
-
-
-  <div class="WhiteBg">
-    <div class="blankHXS"></div>
-    <!-- Slideshow Title -->
-    <h2 class="element">Vertical layout without background color </h2>
-    <!-- Slideshow Title -->
-    <div class="TBcarousel Grid--center Grid Grid--full u-textCenter" aria-label="TBcarousel" Tabindex="0"
-      id="TBcarouselGlorify1">
-      <div class="TBslides">
-        <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
-          <img src="../PlaceholderDark.svg" alt="">
-        </div>
-        <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0"> <img
-            src="../PlaceholderDark.svg" alt="">
-        </div>
-        <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0"> <img
-            src="../PlaceholderDark.svg" alt="">
-        </div>
+  <section id="content4">
+    <!-- Title -->
+    <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
+      <div class="Grid-cell">
+        <h1 class="Grid Grid--center"> <span>Components &#160;</span><img class="moveUpDown iconS"
+            src="../icon/components.svg" alt="Research">
+        </h1>
       </div>
-      <div class="TBcarouselNav Grid-cell noBg">
-        <a class="TBsliderNav" aria-label="Go to slide 1">
-          <div>Lorem ipsum</div>
-        </a>
-        <a class="TBsliderNav" aria-label="Go to slide 2">
-          <div>Lorem ipsum</div>
-        </a>
-        <a class="TBsliderNav" aria-label="Go to slide 3">
-          <div>Lorem ipsum</div>
-        </a>
-      </div>
-      <div class="blankHS"></div>
     </div>
-    <div class="blankHXS"></div>
-  </div>
+    <!-- Title -->
+
+    <!-- icon, button -->
+
+    <section id="content41">
+      <div class="element">
+        <p class="tArrow">Icon &#38; button <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+        </p>
+      </div>
+      <div class="element">
+        <h3>Icons</h3>
+      </div>
+      <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
+        <div class="Grid-cell">
+          <div class="element">
+            <a> <img class="intro-logo" src="../icon/in.svg" alt="linkedin"></a>
+            <a> <img class="intro-logo" src="../icon/ins.svg" alt="linkedin"></a>
+            <a> <img class="intro-logo" src="../icon/git.svg" alt="linkedin"></a>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="element">
+            <a> <img class="footer-logo" src="../icon/in.svg" alt="linkedin"></a>
+            <a> <img class="footer-logo" src="../icon/ins.svg" alt="linkedin"></a>
+            <a> <img class="footer-logo" src="../icon/git.svg" alt="linkedin"></a>
+          </div>
+        </div>
+      </div>
+      <div class="element">
+        <h3>Buttons</h3>
+      </div>
+      <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
+        <div class="Grid-cell">
+          <div class="element">
+            <a> <button class="buttonLanding">Button
+                &nbsp; </button></a>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="element">
+            <a> <button class="button-35 DS">Button</button></a>
+          </div>
+        </div>
+
+
+      </div>
+      <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
+        <div class="Grid-cell">
+          <div class="element">
+            <a> <button class="buttonLanding arrButton">Button</a>
+          </div>
+        </div>
+
+        <div class="Grid-cell">
+          <div class="element">
+            <a> <button class="button-35 DS arrButtonSmall">Button</button></a>
+          </div>
+        </div>
+
+      </div>
+    </section>
+    <!-- icon, button -->
+    <div class="blankHM"></div>
+    <!-- Accordion -->
+    <section id="content42">
+      <div class="element">
+        <p class="tArrow">Accordion <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+      </div>
+      <div class="element">
+        <h4 class="accordion accordionBorderTop noMargin"><strong>Title 1</strong>
+        </h4>
+        <div class="accordion-content">
+          <h4><strong>Subtitle</strong> </h4>
+          <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            laboris nisi
+            ut
+            aliquip ex ea commodo consequat.</h4>
+          <ul>
+            <li> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla
+              pariatur. </li>
+            <li> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+              anim id
+              est
+              laborum.</li>
+          </ul>
+          <div class="blankHXS"></div>
+        </div>
+
+        <h4 class="accordion noMargin"><strong>Title 2</strong></h4>
+        <div class="accordion-content">
+          <h4><strong>Subtitle</strong> </h4>
+          <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            laboris nisi
+            ut
+            aliquip ex ea commodo consequat.</h4>
+          <ul>
+            <li> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla
+              pariatur. </li>
+            <li> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+              anim id
+              est
+              laborum.</li>
+          </ul>
+          <div class="blankHXS"></div>
+        </div>
+
+        <h4 class="accordion noMargin"><strong>Title 3</strong></h4>
+
+        <div class="accordion-content accordionBorderBottom">
+          <h4><strong>Subtitle</strong> </h4>
+          <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            laboris nisi
+            ut
+            aliquip ex ea commodo consequat.</h4>
+          <ul>
+            <li> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla
+              pariatur. </li>
+            <li> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+              anim id
+              est
+              laborum.</li>
+          </ul>
+          <div class="blankHXS"></div>
+        </div>
+      </div>
+    </section>
+    <!-- Accordion -->
+    <div class="blankHM"></div>
+    <section id="content43">
+      <div class="element">
+        <p class="tArrow">Slideshows <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+      </div>
+      <div class="blankHXS"></div>
+      <!-- LRcarousel-->
+      <div class="SkylineBlueLter">
+        <div class="blankHXS"></div>
+        <!-- Slideshow Title -->
+        <h2 class="element">Horizontal layout with background color </h2>
+        <!-- Slideshow Title -->
+        <div class="wrapper LRcarousel Grid Grid--gutters Grid--1of4 Grid--center u-textCenter"
+          aria-label="LRcarousel" Tabindex="0" id="carousel1">
+          <div class="carousel__nav Grid-cell">
+            <a class="slider-nav" aria-label="Go to slide 1">
+              <div>Lorem ipsum</div>
+            </a>
+            <a class="slider-nav" aria-label="Go to slide 2">
+              <div>Lorem ipsum</div>
+            </a>
+            <a class="slider-nav" aria-label="Go to slide 3">
+              <div>Lorem ipsum</div>
+            </a>
+          </div>
+          <div class="LRslides Grid-cell">
+            <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
+              <img src="../Placeholder.svg" alt="">
+            </div>
+            <div class="slides-item slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0">
+              <img src="../Placeholder.svg" alt="">
+
+            </div>
+            <div class="slides-item slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0">
+              <img src="../Placeholder.svg" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="blankHXS"></div>
+
+      </div>
+      <!-- LRcarousel-->
+      <div class="blankHM"></div>
+
+      <!-- LRcarousel without background-->
+
+      <div class="WhiteBg">
+        <div class="blankHXS"></div>
+        <!-- Slideshow Title -->
+        <h2 class="element">Horizontal layout without background color </h2>
+        <!-- Slideshow Title -->
+        <div class="wrapper LRcarousel Grid Grid--gutters Grid--1of4 Grid--center u-textCenter"
+          aria-label="LRcarousel" Tabindex="0" id="carousel2">
+          <div class="carousel__nav noBg Grid-cell">
+            <a class="slider-nav" aria-label="Go to slide 1">
+              <div>Lorem ipsum</div>
+            </a>
+            <a class="slider-nav" aria-label="Go to slide 2">
+              <div>Lorem ipsum</div>
+            </a>
+            <a class="slider-nav" aria-label="Go to slide 3">
+              <div>Lorem ipsum</div>
+            </a>
+          </div>
+          <div class="LRslides Grid-cell">
+            <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
+              <img src="../PlaceholderDark.svg" alt="">
+            </div>
+            <div class="slides-item slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0">
+              <img src="../PlaceholderDark.svg" alt="">
+
+            </div>
+            <div class="slides-item slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0">
+              <img src="../PlaceholderDark.svg" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="blankHXS"></div>
+      </div>
+      <!-- LRcarousel without background-->
+
+
+
+
+      <div class="blankHM"></div>
+
+
+      <!-- TBcarousel with background-->
+
+      <div class="SkylineBlueLter">
+        <div class="blankHXS"></div>
+        <!-- Slideshow Title -->
+        <h2 class="element">Vertical layout with background color </h2>
+        <!-- Slideshow Title -->
+        <div class="TBcarousel Grid--center Grid Grid--full u-textCenter" aria-label="TBcarousel" Tabindex="0"
+          id="TBcarousel1">
+          <div class="TBslides">
+            <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
+              <img src="../Placeholder.svg" alt="">
+            </div>
+            <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0"> <img
+                src="../Placeholder.svg" alt="">
+            </div>
+            <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0"> <img
+                src="../Placeholder.svg" alt="">
+            </div>
+          </div>
+          <div class="TBcarouselNav Grid-cell">
+            <a class="TBsliderNav" aria-label="Go to slide 1">
+              <div>Lorem ipsum</div>
+            </a>
+            <a class="TBsliderNav" aria-label="Go to slide 2">
+              <div>Lorem ipsum</div>
+            </a>
+            <a class="TBsliderNav" aria-label="Go to slide 3">
+              <div>Lorem ipsum</div>
+            </a>
+          </div>
+          <div class="blankHS"></div>
+        </div>
+        <div class="blankHXS"></div>
+      </div>
+      <!-- TBcarousel with background-->
+      <div class="blankHM"></div>
+      <!-- TBcarousel-->
+      <div class="blankHM"></div>
+      <div class="WhiteBg">
+        <div class="blankHXS"></div>
+        <!-- Slideshow Title -->
+        <h2 class="element">Vertical layout without background color </h2>
+        <!-- Slideshow Title -->
+        <div class="TBcarousel Grid--center Grid Grid--full u-textCenter" aria-label="TBcarousel" Tabindex="0"
+          id="TBcarousel2">
+          <div class="TBslides">
+            <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
+              <img src="../PlaceholderDark.svg" alt="">
+            </div>
+            <div class="TBslidesItem slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0"> <img
+                src="../PlaceholderDark.svg" alt="">
+            </div>
+            <div class="TBslidesItem slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0"> <img
+                src="../PlaceholderDark.svg" alt="">
+            </div>
+          </div>
+          <div class="TBcarouselNav Grid-cell noBg">
+            <a class="TBsliderNav" aria-label="Go to slide 1">
+              <div>Lorem ipsum</div>
+            </a>
+            <a class="TBsliderNav" aria-label="Go to slide 2">
+              <div>Lorem ipsum</div>
+            </a>
+            <a class="TBsliderNav" aria-label="Go to slide 3">
+              <div>Lorem ipsum</div>
+            </a>
+          </div>
+          <div class="blankHS"></div>
+        </div>
+        <div class="blankHXS"></div>
+      </div>
+    </section>
+    <div class="blankHM"></div>
+
+  </section>
+
 
 
 
@@ -238,7 +509,6 @@
 
 
 
-  <hr>
 
   <div class="blankHL"></div>
   <div class="Grid Grid--full u-textCenter">
