--- a/glorify/index.html
+++ b/glorify/index.html
@@ -694,6 +694,8 @@
             </div>
           </div>
         </div>
+
+
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
             <div class="element">
@@ -1258,7 +1260,7 @@
       <div class="Grid Grid--gutters Grid--cols-4">
         <div class="Grid-cell">
           <div class="element ">
-            <h2> <strong> Most rational</strong> </h2>
+            <h3> <strong> Most rational</strong> </h3>
             <h5> <strong> Befriend in the community</strong> </h5>
 
             <ul>
@@ -1279,7 +1281,7 @@
 
         <div class="Grid-cell">
           <div class="element ">
-            <h2> <strong> Most delightful</strong> </h2>
+            <h3> <strong> Most delightful</strong> </h3>
 
             <h5> <strong> Discover and join group events</strong> </h5>
             <ul>
@@ -1298,7 +1300,7 @@
         </div>
         <div class="Grid-cell">
           <div class="element ">
-            <h2> <strong> Darling</strong> </h2>
+            <h3> <strong> Darling</strong> </h3>
             <h5> <strong> Discover and join group events</strong> </h5>
             <ul>
               <li>Facilitate prayer-focused group worship through the app</li>
@@ -1311,7 +1313,7 @@
         </div>
         <div class="Grid-cell">
           <div class="element ">
-            <h2> <strong> Long shot</strong> </h2>
+            <h3> <strong> Long shot</strong> </h3>
             <h5> <strong> Create a local group community</strong> </h5>
 
             <ul>
@@ -1362,9 +1364,6 @@
               <div class="Grid-cell">
                 <div class="element">
                   <img class="modal-target" src="Research_Sketch_GroupPrayer.png" alt="Pain points">
-
-
-
                 </div>
               </div>
             </div>
@@ -1374,14 +1373,10 @@
               <div class="Grid-cell">
                 <div class="element">
                   <img class="modal-target" src="Research_Sketch_BibleStudy.png" alt="Pain points">
-
-
                 </div>
               </div>
             </div>
           </div>
-
-
         </div>
         <div class="TBcarouselNav Grid-cell noBg">
           <a class="TBsliderNav" aria-label="Go to slide 1">
@@ -1390,13 +1385,76 @@
           <a class="TBsliderNav" aria-label="Go to slide 2">
             <div>Bible study</div>
           </a>
-
         </div>
-        <div class="Grid Grid--full">
-          <div class="Grid-cell">
-            <div class="element">
-              <h2> <strong class="colorGLORIFYOrange"> Concept test interview</strong> </h2>
-            </div>
+
+      </div>
+
+      <div class="Grid Grid--full ">
+        <div class="Grid-cell">
+          <div class="element">
+            <h2> <strong class="colorGLORIFYOrange"> Concept Test &#124; Feedback session script</strong> </h2>
+          </div>
+        </div>
+      </div>
+      <div class="Grid Grid--gutters Grid--cols-2">
+        <div class="Grid-cell">
+          <div class="element">
+            <h4> <strong>Research Goal</strong> </h4>
+            <p>Gather feedback to understand users' initial impressions of the concepts.
+            </p>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="element">
+            <h4> <strong>Intro</strong> </h4>
+            <p> Thanks for supporting me with this feedback session! I will present two early design concepts for a
+              mobile app. <strong class="colorGLORIFYOrange"> The goal of these apps is to facilitate individuals in
+                joining group worship, while
+                also enabling interaction and connection with other fellowships within the Glorify app. </strong> I want
+              to gather feedback about these ideas before I move forward with the design process.</p>
+          </div>
+        </div>
+      </div>
+      <div class="Grid Grid--gutters Grid--cols-2">
+        <div class="Grid-cell">
+          <div class="element">
+            <h4> <strong>Concept A</strong> </h4>
+
+            <p>the first concept is adding a group prayer feature to the existing Christian single-player app. The goal
+              is to help users discover like-minded individuals during group prayer sessions.</p>
+              <p>With the app, users can:</p>
+            <ul>
+              <li class="listCircle">Create a group prayer room </li>
+              <li class="listCircle">Discover group prayers that align with their interests </li>
+              <li class="listCircle">Find a suitable group prayer to participate in </li>
+              <li class="listCircle">Engage in prayer with other fellowships within the room </li>
+              <li class="listCircle">Foster connections with other fellowships after the group prayer session </li>
+
+            </ul>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="element">
+            <h4> <strong>Concept B</strong> </h4>
+            <p>the first concept is adding a group prayer feature to the existing Christian single-player app. The goal
+              is to help users discover like-minded individuals during group prayer sessions.</p>
+              <p>With the app, users can:</p>
+            <ul>
+              <li class="listCircle">Create a Bible study room </li>
+              <li class="listCircle">Discover topics that align with their interests</li>
+              <li class="listCircle">Find a Bible study session to join</li>
+              <li class="listCircle">Engage in discussions with other fellowships within the room</li>
+              <li class="listCircle">Foster connections with other fellowships after the Bible study session</li>
+
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="Grid Grid--full">
+        <div class="Grid-cell">
+          <div class="element">
+            <h4> <strong> Conclusion </strong> </h4>
+            <p>That's the end of our session! Thank you for providing your thoughts on these concepts. I appreciate your time.</p>
           </div>
         </div>
       </div>
