--- a/glorify/index.html
+++ b/glorify/index.html
@@ -347,21 +347,21 @@
     <div class="blankHXS"></div>
     <div class="Grid Grid--gutters Grid--cols-3 u-textCenter wrapper">
       <div class="Grid-cell ">
-        <div class="element"> <img class="widthXS" src="HiFi_GroupPrayer_QuickStartPtt.gif" alt="New User">
+        <div class="element"> <img class="widthS" src="HiFi_GroupPrayer_QuickStartPtt.gif" alt="New User">
         </div>
         <div class="element">
           <h4> Quick start group prayer</h4>
         </div>
       </div>
       <div class="Grid-cell ">
-        <div class="element"> <img class="widthXS" src="HiFi_GroupPrayer_CustomPtt.gif" alt="New User">
+        <div class="element"> <img class="widthS" src="HiFi_GroupPrayer_CustomPtt.gif" alt="New User">
         </div>
         <div class="element">
           <h4> Customized group prayer</h4>
         </div>
       </div>
       <div class="Grid-cell ">
-        <div class="element"> <img class="widthXS" src="HiFi_GroupPrayer_JoinPtt.gif" alt="New User">
+        <div class="element"> <img class="widthS" src="HiFi_GroupPrayer_JoinPtt.gif" alt="New User">
         </div>
         <div class="element">
           <h4> Join group prayer</h4>
@@ -428,6 +428,11 @@
 
   </div>
   <!-- LRcarousel-->
+
+
+
+
+
 
 
 
@@ -1664,11 +1669,6 @@
 
 
   </main>
-
-
-
-
-
 
 
 
